Start updating API to Java 21 (using J20 as intermediary)