@@ -5,9 +5,9 @@ import rapier.Droppable;
 import rapier.RefNative;
 import rapier.data.ArenaKey;
 
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.Arena;
 import java.lang.foreign.ValueLayout;
 
 public final class IslandManager extends RefNative implements Droppable {
@@ -18,11 +18,11 @@ public final class IslandManager extends RefNative implements Droppable {
         dropped.drop(() -> rapier.sys.RapierC.RprIslandManager_drop(self));
     }
 
-    private IslandManager(MemoryAddress memory) {
+    private IslandManager(MemorySegment memory) {
         super(memory);
     }
 
-    public static IslandManager at(MemoryAddress memory) {
+    public static IslandManager at(MemorySegment memory) {
         return new IslandManager(memory);
     }
 
@@ -31,26 +31,26 @@ public final class IslandManager extends RefNative implements Droppable {
     }
 
     public ArenaKey[] getActiveKinematicBodies() {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             var data = arena.allocate(ValueLayout.ADDRESS);
             var len = arena.allocate(ValueLayout.JAVA_LONG);
             rapier.sys.RapierC.RprIslandManager_active_kinematic_bodies(self, data, len);
 
             var ptr = data.get(ValueLayout.ADDRESS, 0);
             int iLen = (int) len.get(ValueLayout.JAVA_LONG, 0);
-            return ArenaKey.fromSlice(MemorySegment.ofAddress(ptr, ArenaKey.sizeof() * iLen, arena), iLen);
+            return ArenaKey.fromSlice(MemorySegment.ofAddress(ptr.address(), ArenaKey.sizeof() * iLen, arena.scope()), iLen);
         }
     }
 
     public ArenaKey[] getActiveDynamicBodies() {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             var data = arena.allocate(ValueLayout.ADDRESS);
             var len = arena.allocate(ValueLayout.JAVA_LONG);
             rapier.sys.RapierC.RprIslandManager_active_dynamic_bodies(self, data, len);
 
             var ptr = data.get(ValueLayout.ADDRESS, 0);
             int iLen = (int) len.get(ValueLayout.JAVA_LONG, 0);
-            return ArenaKey.fromSlice(MemorySegment.ofAddress(ptr, ArenaKey.sizeof() * iLen, arena), iLen);
+            return ArenaKey.fromSlice(MemorySegment.ofAddress(ptr.address(), ArenaKey.sizeof() * iLen, arena.scope()), iLen);
         }
     }
 }
