@@ -7,8 +7,8 @@ import rapier.data.ArenaKey;
 import rapier.dynamics.joint.GenericJoint;
 
 import javax.annotation.Nullable;
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.Arena;
 
 public final class MultibodyJointSet extends RefNative implements Droppable {
     private final DropFlag dropped = new DropFlag();
@@ -18,11 +18,11 @@ public final class MultibodyJointSet extends RefNative implements Droppable {
         dropped.drop(() -> rapier.sys.RapierC.RprMultibodyJointSet_drop(self));
     }
 
-    private MultibodyJointSet(MemoryAddress memory) {
+    private MultibodyJointSet(MemorySegment memory) {
         super(memory);
     }
 
-    public static MultibodyJointSet at(MemoryAddress memory) {
+    public static MultibodyJointSet at(MemorySegment memory) {
         return new MultibodyJointSet(memory);
     }
 
@@ -31,7 +31,7 @@ public final class MultibodyJointSet extends RefNative implements Droppable {
     }
 
     public @Nullable ArenaKey insert(ArenaKey body1, ArenaKey body2, GenericJoint.Mut data, boolean wakeUp) {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             var res = ArenaKey.alloc(arena);
             if (rapier.sys.RapierC.RprMultibodyJointSet_insert(
                     self,
@@ -46,19 +46,19 @@ public final class MultibodyJointSet extends RefNative implements Droppable {
     }
 
     public void remove(ArenaKey handle, boolean wakeUp) {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             rapier.sys.RapierC.RprMultibodyJointSet_remove(self, handle.allocInto(arena), wakeUp);
         }
     }
 
     public void removeMultibodyArticulations(ArenaKey handle, boolean wakeUp) {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             rapier.sys.RapierC.RprMultibodyJointSet_remove_multibody_articulations(self, handle.allocInto(arena), wakeUp);
         }
     }
 
     public void removeJointsAttachedToRigidBody(ArenaKey rbToRemove) {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             rapier.sys.RapierC.RprMultibodyJointSet_remove_joints_attached_to_rigid_body(self, rbToRemove.allocInto(arena));
         }
     }
