@@ -4,33 +4,33 @@ import rapier.Native;
 import rapier.RefNative;
 import rapier.data.ArenaKey;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.Arena;
 import java.lang.foreign.ValueLayout;
 
 public final class ContactPair extends RefNative {
-    private ContactPair(MemoryAddress memory) {
+    private ContactPair(MemorySegment memory) {
         super(memory);
     }
 
-    public static ContactPair at(MemoryAddress memory) {
+    public static ContactPair at(MemorySegment memory) {
         return new ContactPair(memory);
     }
 
     public ArenaKey getCollider1() {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             return ArenaKey.from(rapier.sys.RapierC.RprContactPair_collider1(arena, self));
         }
     }
 
     public ArenaKey getCollider2() {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             return ArenaKey.from(rapier.sys.RapierC.RprContactPair_collider2(arena, self));
         }
     }
 
     public ContactManifold[] getManifolds() {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             var data = arena.allocate(ValueLayout.ADDRESS);
             var len = arena.allocate(ValueLayout.JAVA_LONG);
             rapier.sys.RapierC.RprContactPair_manifolds(self, data, len);
