@@ -4,26 +4,26 @@ import rapier.RefNative;
 import rapier.__real;
 import rapier.math.Vector;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.Arena;
 
 public final class SolverContact extends RefNative {
-    private SolverContact(MemoryAddress memory) {
+    private SolverContact(MemorySegment memory) {
         super(memory);
     }
 
-    public static SolverContact at(MemoryAddress memory) {
+    public static SolverContact at(MemorySegment memory) {
         return new SolverContact(memory);
     }
 
     public Vector getPoint() {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             return Vector.from(rapier.sys.RapierC.RprSolverContact_point(arena, self));
         }
     }
 
     public void setPoint(Vector value) {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             rapier.sys.RapierC.RprSolverContact_set_point(self, value.allocInto(arena));
         }
     }
@@ -53,13 +53,13 @@ public final class SolverContact extends RefNative {
     }
 
     public Vector getTangentVelocity() {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             return Vector.from(rapier.sys.RapierC.RprSolverContact_tangent_velocity(arena, self));
         }
     }
 
     public void setTangentVelocity(Vector value) {
-        try (var arena = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             rapier.sys.RapierC.RprSolverContact_set_tangent_velocity(self, value.allocInto(arena));
         }
     }
